--- a/Projects/01-Cities-Project/src/components/navbar/Nav.css
+++ b/Projects/01-Cities-Project/src/components/navbar/Nav.css
@@ -2,7 +2,15 @@
 
 .navbar {
   background-color: #171b20;
+  padding: 5px;
+}
+.navbar ul {
+  padding: 5px;
+  padding-top: 10px;
+  width: 100%;
+
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
 }
 
@@ -22,14 +30,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 400px;
+  width: 20%;
+
   margin: 3px;
 }
 
 .input {
-  margin: 20px;
   height: 30px;
-  width: 350px;
+  width: 100%;
+
   border-radius: 5px;
   padding-left: 10px;
 }
