--- a/Projects/01-Cities-Project/src/components/footer/Footer.css
+++ b/Projects/01-Cities-Project/src/components/footer/Footer.css
@@ -2,6 +2,12 @@
 
 * {
   font-family: Roboto;
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+  position: relative;
 }
 
 .footer-distributed {
