--- a/Projects/01-Cities-Project/src/pages/pages.css
+++ b/Projects/01-Cities-Project/src/pages/pages.css
@@ -9,7 +9,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
 }
 
 .showtitle {
@@ -30,11 +30,10 @@
   filter: grayscale(0%);
 }
 
-.showcard img:hover {
-  filter: grayscale(100%);
-}
-
 .showcard-over {
+  height: 20vh;
+  font-size: 2rem;
+  text-align: center;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
