--- a/Projects/01-Cities-Project/src/components/footer/Footer.css
+++ b/Projects/01-Cities-Project/src/components/footer/Footer.css
@@ -10,9 +10,11 @@
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
+  height: 250px;
   font: bold 16px sans-serif;
   text-align: left;
   padding: 50px 60px 40px;
+
   overflow: hidden;
 }
 
