--- a/Projects/01-Cities-Project/src/components/cards/Cards.css
+++ b/Projects/01-Cities-Project/src/components/cards/Cards.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-.sideBar {
+/* .sideBar {
   position: fixed;
 
   opacity: 0.5;
@@ -20,18 +20,16 @@
   justify-content: space-evenly;
   border-radius: 5px;
   color: #000000;
-}
+} */
 
 .cards {
-  background-color: black;
-  padding: 20px;
-  border-radius: 7px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
   margin: 1rem;
   position: relative;
   overflow: hidden;
   width: 500px;
-  height: 300px;
+  height: 400px;
+  padding-bottom: 10px;
 
   display: flex;
   align-items: center;
@@ -45,9 +43,10 @@
   font-family: "Amatic SC", cursive;
   font-size: 36px;
   border-top: 5px solid white;
-  color: white;
+  color: black;
   width: 95%px;
-  margin: 5px;
+
+  font-weight: bold;
 
   padding-left: 10px;
   padding-right: 10px;
@@ -56,10 +55,10 @@
 .cards img {
   object-fit: cover;
   height: 200px;
-  border-radius: 7px;
-  width: 95%;
+
+  width: 100%;
+  height: 90%;
   filter: grayscale(0%);
-  margin: 5px;
 }
 
 .cards img:hover {
@@ -70,11 +69,11 @@
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
   padding: 1rem;
-  transform: translateY(100%);
+  transform: translateY(-100%);
   transition: transform 0.7s ease-in-out;
 }
 .cards:hover .card-over {
@@ -82,7 +81,7 @@
 }
 
 .favoriteIcon {
-  color: white;
+  color: blue;
 
   margin-top: 6px;
   cursor: pointer;
