--- a/react-lessons/src/App.css
+++ b/react-lessons/src/App.css
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 10px;
 }
 .content {
   display: flex;
@@ -12,4 +13,7 @@
   flex-direction: column;
   border: 2px solid black;
   padding: 20px;
+  height: 300px;
+  width: 250px;
+  margin-left: 10px;
 }
