--- a/react-lessons/src/App.css
+++ b/react-lessons/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,8 +17,8 @@
   width: 250px;
   margin-left: 10px;
   margin-top: 10px;
-} */
-.todo-app {
+}
+*/ .todo-app {
   font-family: sans-serif;
 }
 
